fix: fixing carousel performance on mobile

--- a/style/custom.css
+++ b/style/custom.css
@@ -31,10 +31,6 @@ section p {
     text-align: justify;
 }
 
-.carousel-item {
-    height: 700px;
-}
-
 /* style sobre */
 
 #sobre {
